[Build] Support linking Python as a static library
If `libpython` is linked in to the `test.python.bridge` executable as a
static library, then by default none of `libpython`'s symbols will be
visible to Python extension modules, causing "undefined reference"
errors when importing. This is simply the default behaviour for
executable targets.

So instruct CMake to make the executable's symbols visible.

Signed-off-by: David Feltell <david.feltell@foundry.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -139,6 +139,9 @@ if (OPENASSETIOTEST_ENABLE_PYTHON)
         Python::Python
     )
     target_compile_features(test.python.bridge PRIVATE cxx_std_17)
+    # If libpython is linked in as a static library, then we must export
+    # symbols for dynamically loaded Python extension modules to use.
+    set_target_properties(test.python.bridge PROPERTIES ENABLE_EXPORTS ON)
 
     # Storage for list of environment variables to set before running
     # the test.
