[Build] Set a default build type of Release
The default is toolchain-specific (i.e. CMake generator-specific) and
this can cause unexpected errors.

E.g. if we've installed Python as a Release library, but this project is
built as a Debug library, then on Windows we'll try to link to
`python39_d`, i.e. the debug lib, which may not exist.

We could enforce that `CMAKE_BUILD_TYPE` is always set externally,
however if we forget then builds might just work, but then fail
unexpectedly if we swap the toolchain.

So better to just be consistent and default to Release in all cases,
unless explicitly overridden.

Signed-off-by: David Feltell <david.feltell@foundry.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,8 +3,23 @@
 
 cmake_minimum_required(VERSION 3.21)
 
-project(OpenAssetIO-Test-CMake)
+# Set a default build type if none was specified.
+# The CMake default is toolchain-specific so ensure consistency by
+# having an explicit default.
+if (NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
+    message(STATUS "Setting build type to 'Release' as none was specified.")
+    set(CMAKE_BUILD_TYPE Release CACHE STRING "Choose the type of build." FORCE)
+    # Set the possible values of build type for cmake-gui, ccmake
+    set_property(
+        CACHE CMAKE_BUILD_TYPE
+        PROPERTY STRINGS
+        "Debug"
+        "Release"
+        "MinSizeRel"
+        "RelWithDebInfo")
+endif ()
 
+project(OpenAssetIO-Test-CMake)
 enable_testing()
 
 #-----------------------------------------------------------------------
