[Core] Add OpenAssetIO-MediaCreation
In order to test and demonstrate OpenAssetIO-MediaCreation, add it as a
dependency to this project. This shows how it is, and can be, configured
as a cmake-dependency or a git submodule.

Signed-off-by: Elliot Morris <elliot.morris@foundry.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
 [submodule "OpenAssetIO"]
 	path = OpenAssetIO
 	url = https://github.com/OpenAssetIO/OpenAssetIO.git
+	branch = main
+[submodule "OpenAssetIO-MediaCreation"]
+	path = OpenAssetIO-MediaCreation
+	url = https://github.com/OpenAssetIO/OpenAssetIO-MediaCreation.git
+	branch = main
