--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,7 +81,7 @@ jobs:
           path: ./openassetio-mediacreation-build
 
       - name: "Get Submodules"
-        run: git submodule update --init --recursive OpenAssetIO
+        run: git submodule update --init --recursive --remote OpenAssetIO
 
       - name: Configure CMake build
         run: >
@@ -118,7 +118,7 @@ jobs:
           python -m pip install git+https://github.com/OpenAssetIO/OpenAssetIO-TraitGen
 
       - name: "Get Submodules"
-        run: git submodule update --init --recursive OpenAssetIO-MediaCreation
+        run: git submodule update --init --recursive --remote OpenAssetIO-MediaCreation
 
       - name: Configure CMake build
         run: >
@@ -146,7 +146,7 @@ jobs:
           python -m pip install git+https://github.com/OpenAssetIO/OpenAssetIO-TraitGen
 
       - name: "Get Submodules"
-        run: git submodule update --init --recursive
+        run: git submodule update --init --recursive --remote
 
       - name: Configure CMake build
         run: >
